dev/old/backend-grpc.yaml
#GRPC Backend python

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-backend-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-backend-containers
      tier: backend
      version: v1
  template:
    metadata:
      labels:
        app: grpc-backend-containers
        tier: backend
        version: v1
      annotations:
        prometheus.io/scrape: "true" # determines if a pod should be scraped. Set to true to enable scraping.
        prometheus.io/path: / # determines the path to scrape metrics at.
        prometheus.io/port: "9001" # determines the port to scrape metrics at.
    spec:
      containers:
      - name: grpc-backend-pod
        image: yuriykrasilnikov/grpc_greeter_server:v.0.1.0
        ports:
        - name: grpc-port
          containerPort: 9000
        volumeMounts:
        - name: grpc-backend-storage
          mountPath: /usr/src/app
      volumes:
      - name: grpc-backend-storage
        hostPath:
          path: /minikube-host/grpc_greeter_server/src/
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-backend-service
  namespace: development
  labels:
    app: grpc-backend-service
    tier: backend
spec:
  type: NodePort
  selector:
    app: grpc-backend-containers
  ports:
  - name: grpc-web-port
    protocol: TCP
    port: 9000
  - name: http-metrics-port
    port: 9001
