dev/old/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-backend-ingress
  namespace: development
spec:
  backend:
    serviceName: flask-backend-service
    servicePort: 80
